# TCRtoolbox

./: .env  .gitignore  .ruff.toml  README.md  pyproject.toml  tcr-toolbox_ARM_env.yml  tcr-toolbox_x86_env.yml
configs/sequencing_analysis/: run_config_count_reads_bulk_150bp_custom-tcr_bwa.json  run_config_count_reads_bulk_150bp_custom-tcr_minimap2.json  run_config_count_reads_bulk_150bp_p20-minigene_bwa.json  run_config_count_reads_bulk_150bp_p20-minigene_minimap2.json  run_config_count_reads_bulk_150bp_udi-tcr_bwa.json  run_config_count_reads_bulk_150bp_udi-tcr_minimap2.json
configs/sequencing_analysis/run_count_slurm_sh_scripts/: run_count_reads_bulk_slurm.sh  run_count_umi_cell.sh
configs/tcr_assembly/: oligo_order_run_config.json  run_assembly_run_config.json  simulation_run_config.json
configs/tcr_reconstruction/: tcr_reconstruction_simple.json
tcr_toolbox/: cli.py
tcr_toolbox/sequencing_analysis/: align_count.py  constants.py  reference.py  utils.py
tcr_toolbox/tcr_assembly/: constants.py  order_automation.py  tcr_assembly_pipeline.py
tcr_toolbox/tcr_parsing/: constants.py  parser_utils.py
tcr_toolbox/tcr_reconstruction/: constants.py  reconstruct_tcrs_simple.py  reconstruction_tcr_assembly.py  reconstruction_utils.py
tcr_toolbox/utils/: codon_optimizer.py  codon_optimizer_deprecated.py  constants.py  logger.py  plot_utils.py  stat_utils.py  utils.py
tutorials/: assembly_tutorial.md  count_bulk_illumina_seq_reads_cli_tutorial.md  tcr_reconstruction_tutorial.md
